[gd_scene load_steps=2 format=3 uid="uid://hn3guh44rqp"]

[ext_resource type="Script" path="res://scenes/primary_stats_container.gd" id="1_lyijq"]

[node name="PrimaryStatsContainer" type="HBoxContainer" groups=["stat_container"]]
custom_minimum_size = Vector2(180, 0)
script = ExtResource("1_lyijq")
stat_name = null

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InfoContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PrimaryStatLabel" type="Label" parent="VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PrimaryStatLineEdit" type="LineEdit" parent="VBoxContainer/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
alignment = 1
max_length = 2
context_menu_enabled = false
flat = true
caret_blink = true
caret_blink_interval = 0.5

[node name="ModifierContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="ModifierStatLabel" type="Label" parent="ModifierContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProficientCheckContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2

[node name="ProficientCheckButton" type="CheckBox" parent="ProficientCheckContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Proficient"

[node name="RollCheckButton" type="Button" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Check"

[connection signal="text_changed" from="VBoxContainer/InputContainer/PrimaryStatLineEdit" to="." method="_on_primary_stat_line_edit_text_changed"]
[connection signal="toggled" from="ProficientCheckContainer/ProficientCheckButton" to="." method="_on_proficient_check_button_toggled"]
[connection signal="pressed" from="RollCheckButton" to="." method="_on_roll_check_button_pressed"]
